Bug 455912 - Brush outline is just square for all the brushes uses predefined tips
Summary: Brush outline is just square for all the brushes uses predefined tips
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression, release_blocker
: 456080 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-06-25 11:06 UTC by acc4commissions
Modified: 2022-06-29 14:11 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
capture (4.08 KB, image/png)
2022-06-25 11:06 UTC, acc4commissions
Details

Note You need to log in before you can comment on or make changes to this bug.
Description acc4commissions 2022-06-25 11:06:24 UTC
Created attachment 150137 [details]
capture

SUMMARY
git 42d5b4f

The title says it all.

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 tomtomtomreportingin 2022-06-25 12:15:38 UTC
I can confirm this. However, the bug doesn't occur with alpha brush tips.
Comment 2 wolthera 2022-06-28 12:12:40 UTC
*** Bug 456080 has been marked as a duplicate of this bug. ***
Comment 3 mateo 2022-06-29 12:55:32 UTC
Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 5.15.49-1-MANJARO
  Pretty Productname: Manjaro Linux
  Product Type: manjaro
  Product Version: unknown
  Desktop: XFCE

I got the same error
Comment 4 Dmitry Kazakov 2022-06-29 14:09:56 UTC
Git commit f3afd1f74fc8efe52270e91c5cde597ef7515aed by Dmitry Kazakov.
Committed on 29/06/2022 at 14:09.
Pushed by dkazakov into branch 'master'.

Fix brush outline of the predefined brushes

The brushes that don't have an alpha channel embedded should
be converted into the mask manually before we can use them for
the outline generation.

M  +32   -13   libs/brush/kis_brush.cpp

https://invent.kde.org/graphics/krita/commit/f3afd1f74fc8efe52270e91c5cde597ef7515aed
Comment 5 Dmitry Kazakov 2022-06-29 14:11:16 UTC
Git commit 3ecf7c72ce41479cfc4c006503fc63447d5aca94 by Dmitry Kazakov.
Committed on 29/06/2022 at 14:11.
Pushed by dkazakov into branch 'krita/5.1'.

Fix brush outline of the predefined brushes

The brushes that don't have an alpha channel embedded should
be converted into the mask manually before we can use them for
the outline generation.

M  +32   -13   libs/brush/kis_brush.cpp

https://invent.kde.org/graphics/krita/commit/3ecf7c72ce41479cfc4c006503fc63447d5aca94