Fix brush outline of the predefined brushes

The brushes that don't have an alpha channel embedded should
be converted into the mask manually before we can use them for
the outline generation.

BUG:455912